# Procedural-Tectonic-Planets

./: CMakeLists (windows).txt  CMakeLists.txt  main.cpp  readme.txt
shaders/: amplify.frag  amplify.vert  atmosphere.frag  atmosphere.vert  fragmentShader.glsl  stars.frag  stars.vert  tesselate.geom  vertexShader.glsl
src/: ShaderProgram.h  Skybox.cpp  Skybox.h  SphericalGrid.h  UnionFind.h  Vec3.h  amplification.h  continentalCollision.cpp  crust.h  crustGeneration.cpp  erosion.h  kdtree.cpp  kdtree.h  mesh.cpp  mesh.h  movement.cpp  movement.h  palette.cpp  palette.h  planet.cpp  planet.h  plate.cpp  reSampling.cpp  rifting.cpp  rifting.h  smooth.cpp  subduction.cpp  subduction.h  tectonicPhenomenon.h  util.h
